[package]
name = "dotsnboxes"
version = "0.1.0"
authors = ["angelbeshirov <angel.beshirov@abv.bg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
rand = "0.7.3"
cgmath = {version= "0.17", features=["mint"]}
iced = "0.1.0-beta"